<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory app:title="@string/set_cat_default">
        <Preference
            app:key="default_sms"
            app:title="@string/set_default_sms_title"
            app:summary="@string/set_default_sms_sub" />
        <Preference
            app:key="default_phone"
            app:title="@string/set_default_phone_title"
            app:summary="@string/set_default_phone_sub" />
        <Preference
            app:key="default_screen"
            app:title="@string/set_default_screen_title"
            app:summary="@string/set_default_screen_sub" />
    </PreferenceCategory>

    <PreferenceCategory app:title="@string/set_cat_sms">
        <com.dresos.dressecurecomms.ui.EncryptedEditTextPreference
            app:key="sms_shared_key"
            app:title="@string/set_sms_key_title"
            app:summary="@string/set_sms_key_sub" />
    </PreferenceCategory>

    <PreferenceCategory app:title="@string/set_cat_scan">
        <com.dresos.dressecurecomms.ui.EncryptedEditTextPreference
            app:key="virustotal_api_key"
            app:title="@string/set_vt_title"
            app:summary="@string/set_vt_sub" />
    </PreferenceCategory>

    <PreferenceCategory app:title="@string/set_cat_geo">
        <EditTextPreference
            app:key="mock_lat"
            app:title="@string/set_lat_title"
            android:inputType="numberDecimal|numberSigned" />
        <EditTextPreference
            app:key="mock_long"
            app:title="@string/set_long_title"
            android:inputType="numberDecimal|numberSigned" />
        <Preference
            app:key="geo_random"
            app:title="@string/set_geo_random_title"
            app:summary="@string/set_geo_random_sub" />
        <Preference
            app:key="geo_apply"
            app:title="@string/set_geo_apply_title"
            app:summary="@string/set_geo_apply_sub" />
        <Preference
            app:key="geo_clear"
            app:title="@string/set_geo_clear_title"
            app:summary="@string/set_geo_clear_sub" />
    </PreferenceCategory>

    <PreferenceCategory app:title="@string/set_cat_calls">
        <SwitchPreferenceCompat
            app:key="call_screen_off"
            app:title="@string/set_call_screen_off_title"
            app:summary="@string/set_call_screen_off_sub"
            app:defaultValue="true" />
    </PreferenceCategory>

    <PreferenceCategory app:title="@string/set_cat_spam">
        <SwitchPreferenceCompat
            app:key="spam_block_premium"
            app:title="@string/set_spam_premium_title"
            app:summary="@string/set_spam_premium_sub"
            app:defaultValue="true" />
        <SwitchPreferenceCompat
            app:key="spam_flag_spoofed"
            app:title="@string/set_spam_spoofed_title"
            app:summary="@string/set_spam_spoofed_sub"
            app:defaultValue="true" />
        <SwitchPreferenceCompat
            app:key="spam_block_unknown"
            app:title="@string/set_spam_unknown_title"
            app:summary="@string/set_spam_unknown_sub"
            app:defaultValue="false" />
        <SwitchPreferenceCompat
            app:key="spam_block_withheld"
            app:title="@string/set_spam_withheld_title"
            app:summary="@string/set_spam_withheld_sub"
            app:defaultValue="false" />
        <EditTextPreference
            app:key="own_number"
            app:title="@string/set_own_number_title"
            app:summary="@string/set_own_number_sub"
            app:useSimpleSummaryProvider="false" />
        <Preference
            app:key="spam_manage"
            app:title="@string/set_spam_manage_title"
            app:summary="@string/set_spam_manage_sub" />
    </PreferenceCategory>

    <PreferenceCategory app:title="@string/set_cat_lock">
        <SwitchPreferenceCompat
            app:key="app_lock"
            app:title="@string/set_lock_title"
            app:summary="@string/set_lock_sub"
            app:defaultValue="true" />
        <SwitchPreferenceCompat
            app:key="block_screenshots"
            app:title="@string/set_shot_title"
            app:summary="@string/set_shot_sub"
            app:defaultValue="true" />
    </PreferenceCategory>

    <PreferenceCategory app:title="@string/set_cat_diag">
        <Preference
            app:key="share_crash_log"
            app:title="@string/set_sharelog_title"
            app:summary="@string/set_sharelog_sub" />
    </PreferenceCategory>
    <PreferenceCategory app:title="@string/set_cat_language">
        <ListPreference
            app:key="language_pref"
            app:title="@string/set_language_title"
            app:summary="@string/set_language_sub"
            app:entries="@array/language_names"
            app:entryValues="@array/language_values"
            app:defaultValue="" />
    </PreferenceCategory>

</PreferenceScreen>
